# game_engine

./: .gitmodules  CMakeLists.txt
empty/: CMakeLists.txt  empty_application.cpp
framework/common/: CMakeLists.txt  GfxConfiguration.hpp  allocator.cpp  allocator.hpp  base_application.cpp  base_application.hpp  graphics_manager.cpp  graphics_manager.hpp  main.cpp  memory_manager.cpp  memory_manager.hpp
framework/interface/: appliction.hpp  interface.hpp  runtime_module.hpp
platform/linux/: hello_linux.cpp
platform/macosx/: CMakeLists.txt  osx_application.cpp  osx_application.hpp
platform/windows/: CMakeLists.txt  cbuffer.h  hello_win32_d2d.cpp  hello_win32_d3d.cpp  hello_windows.cpp
test/: CMakeLists.txt  allocator_test.cpp
